--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "version": "7.8.0",
-    "name": "cordova-plugin-fcm-with-dependecy-updated",
-    "cordova_name": "Cordova FCM Push Plugin",
-    "description": "Google Firebase Cloud Messaging Cordova Push Plugin fork with dependecy updated",
+    "version": "8.0.0",
+    "name": "cordova-plugin-fcm-updated-2025",
+    "cordova_name": "Cordova FCM Push Plugin - 2025 Updated",
+    "description": "Google Firebase Cloud Messaging Cordova Push Plugin updated for modern Cordova Android 14+ and Firebase BOM 32+",
     "license": "MIT",
     "main": "www/FCMPlugin.js",
     "typings": "typings/index.d.ts",
-    "repo": "https://github.com/andrehtissot/cordova-plugin-fcm-with-dependecy-updated",
-    "issue": "https://github.com/andrehtissot/cordova-plugin-fcm-with-dependecy-updated/issues",
-    "author": "André Augusto Tissot",
+    "repo": "https://github.com/Vinidev-AL/cordova-plugin-fcm-with-dependecy-updated",
+    "issue": "https://github.com/Vinidev-AL/cordova-plugin-fcm-with-dependecy-updated/issues",
+    "author": "Updated for 2025 by Vinidev-AL",
     "scripts": {
         "build": "npm run build:www;npm run build:ionic",
         "build:www": "cd ./src/www;npm run build",
@@ -20,7 +20,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/andrehtissot/cordova-plugin-fcm-with-dependecy-updated"
+        "url": "https://github.com/Vinidev-AL/cordova-plugin-fcm-with-dependecy-updated"
     },
     "keywords": [
         "ecosystem:cordova",
