--- a/plugin.xml
+++ b/plugin.xml
@@ -17,9 +17,9 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-fcm-with-dependecy-updated" version="7.8.0">
-	<name>Cordova FCM Push Plugin</name>
-	<description>Google Firebase Cloud Messaging Cordova Push Plugin fork with dependecy updated</description>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-fcm-updated-2025" version="8.0.0">
+	<name>Cordova FCM Push Plugin - 2025 Updated</name>
+	<description>Google Firebase Cloud Messaging Cordova Push Plugin updated for modern Cordova Android 14+ and Firebase BOM 32+</description>
 	<license>MIT</license>
 	<keywords>notifications, push, firebase, fcm, ios, android, cordova, plugin</keywords>
 
@@ -28,23 +28,23 @@
 	</js-module>
 
 	<engines>
-		<engine name="cordova" version=">=8.1.0" />
-		<engine name="cordova-android" version=">=6.4.0" />
-		<engine name="cordova-ios" version=">=5.0.0" />
+		<engine name="cordova" version=">=12.0.0" />
+		<engine name="cordova-android" version=">=12.0.0" />
+		<engine name="cordova-ios" version=">=7.0.0" />
 	</engines>
 
 	<!-- ANDROID CONFIGURATION -->
 	<platform name="android">
 		<preference name="ANDROID_DEFAULT_NOTIFICATION_ICON" default="@mipmap/ic_launcher" />
-		<preference name="ANDROID_FCM_VERSION" default="21.0.0" />
-		<preference name="ANDROID_FIREBASE_BOM_VERSION" default="26.0.0" />
-		<preference name="ANDROID_GOOGLE_SERVICES_VERSION" default="4.3.4" />
-		<preference name="ANDROID_GRADLE_TOOLS_VERSION" default="4.1.0" />
+		<preference name="ANDROID_FCM_VERSION" default="23.4.0" />
+		<preference name="ANDROID_FIREBASE_BOM_VERSION" default="32.7.0" />
+		<preference name="ANDROID_GOOGLE_SERVICES_VERSION" default="4.4.0" />
+		<preference name="ANDROID_GRADLE_TOOLS_VERSION" default="8.2.0" />
 		
 		<!-- <resource-file src="google-services.json" target="app/googleservices.json" /> -->
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<activity android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop">
+			<activity android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop" android:exported="true">
 				<intent-filter>
 					<action android:name="FCM_PLUGIN_ACTIVITY" />
 					<category android:name="android.intent.category.DEFAULT" />
@@ -52,7 +52,8 @@
 			</activity>
 			<service 
 				android:name="com.gae.scaffolder.plugin.MyFirebaseMessagingService"
-				android:stopWithTask="false">
+				android:stopWithTask="false"
+				android:exported="false">
 				<intent-filter>
 					<action android:name="com.google.firebase.MESSAGING_EVENT"/>
 				</intent-filter>
