--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -1,15 +1,15 @@
 buildscript {
     ext {
         // Load system enviroment defined values, or, if unavailable, plugin defaults
-        def ANDROID_GRADLE_TOOLS_VERSION = System.getenv('ANDROID_GRADLE_TOOLS_VERSION') ?: '4.1.0'
+        def ANDROID_GRADLE_TOOLS_VERSION = System.getenv('ANDROID_GRADLE_TOOLS_VERSION') ?: '8.2.0'
         try {
             // Load configuration from install variables (package.json) two directories above
-            def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../package.json").text).cordova.plugins['cordova-plugin-fcm-with-dependecy-updated']
+            def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../package.json").text).cordova.plugins['cordova-plugin-fcm-updated-2025']
             ANDROID_GRADLE_TOOLS_VERSION = PLUGIN_CONFIG.ANDROID_GRADLE_TOOLS_VERSION
         } catch(Exception e0) {
             try {
                 // Load configuration from install variables (package.json) three directories above
-                def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../../package.json").text).cordova.plugins['cordova-plugin-fcm-with-dependecy-updated']
+                def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../../package.json").text).cordova.plugins['cordova-plugin-fcm-updated-2025']
                 ANDROID_GRADLE_TOOLS_VERSION = PLUGIN_CONFIG.ANDROID_GRADLE_TOOLS_VERSION
             } catch(Exception e1) {
                 def WARNING_STYLE = "${(char)27}[33;49"+"m"
@@ -23,11 +23,9 @@ buildscript {
     }
     repositories {
         mavenCentral()
-        jcenter()
+        google()
         mavenLocal()
-        if (gradleNumberVersion >= 3.4f) {
-            google()
-        }
+        gradlePluginPortal()
     }
     //test mabs 10
     //plugins {
@@ -36,17 +34,17 @@ buildscript {
     //}
     dependencies {
         // Load system enviroment defined values, or, if unavailable, plugin defaults
-        def ANDROID_GOOGLE_SERVICES_VERSION = System.getenv('ANDROID_GOOGLE_SERVICES_VERSION') ?: '4.3.4'
-        def ANDROID_GRADLE_TOOLS_VERSION = System.getenv('ANDROID_GRADLE_TOOLS_VERSION') ?: '4.1.0'      
+        def ANDROID_GOOGLE_SERVICES_VERSION = System.getenv('ANDROID_GOOGLE_SERVICES_VERSION') ?: '4.4.0'
+        def ANDROID_GRADLE_TOOLS_VERSION = System.getenv('ANDROID_GRADLE_TOOLS_VERSION') ?: '8.2.0'      
         try {
             // Load configuration from install variables (package.json) two directories above
-            def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../package.json").text).cordova.plugins['cordova-plugin-fcm-with-dependecy-updated']
+            def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../package.json").text).cordova.plugins['cordova-plugin-fcm-updated-2025']
             ANDROID_GOOGLE_SERVICES_VERSION = PLUGIN_CONFIG.ANDROID_GOOGLE_SERVICES_VERSION
             ANDROID_GRADLE_TOOLS_VERSION = PLUGIN_CONFIG.ANDROID_GRADLE_TOOLS_VERSION
         } catch(Exception e0) {
             try {
                 // Load configuration from install variables (package.json) three directories above
-                def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../../package.json").text).cordova.plugins['cordova-plugin-fcm-with-dependecy-updated']
+                def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../../package.json").text).cordova.plugins['cordova-plugin-fcm-updated-2025']
                 ANDROID_GOOGLE_SERVICES_VERSION = PLUGIN_CONFIG.ANDROID_GOOGLE_SERVICES_VERSION
                 ANDROID_GRADLE_TOOLS_VERSION = PLUGIN_CONFIG.ANDROID_GRADLE_TOOLS_VERSION
             } catch(Exception e1) {
@@ -65,10 +63,7 @@ buildscript {
 }
 repositories {
     mavenCentral()
-    jcenter()
-    if (gradleNumberVersion >= 3.4f) {
-        google()
-    }
+    google()
     maven { url "https://salesforce-marketingcloud.github.io/MarketingCloudSDK-Android/repository" }
 }
 //test mabs 10
@@ -83,17 +78,17 @@ dependencies {
     //implementation "com.google.firebase:firebase-core:9.6.1"
     
     // Load system enviroment defined values, or, if unavailable, plugin defaults
-    def ANDROID_FCM_VERSION = System.getenv('ANDROID_FCM_VERSION') ?: '21.0.0'
-    def ANDROID_FIREBASE_BOM_VERSION = System.getenv('ANDROID_FIREBASE_BOM_VERSION') ?: '26.0.0'
+    def ANDROID_FCM_VERSION = System.getenv('ANDROID_FCM_VERSION') ?: '23.4.0'
+    def ANDROID_FIREBASE_BOM_VERSION = System.getenv('ANDROID_FIREBASE_BOM_VERSION') ?: '32.7.0'
     try {
         // Load configuration from install variables (package.json) two directories above
-        def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../package.json").text).cordova.plugins['cordova-plugin-fcm-with-dependecy-updated']
+        def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../package.json").text).cordova.plugins['cordova-plugin-fcm-updated-2025']
         ANDROID_FCM_VERSION = PLUGIN_CONFIG.ANDROID_FCM_VERSION
         ANDROID_FIREBASE_BOM_VERSION = PLUGIN_CONFIG.ANDROID_FIREBASE_BOM_VERSION
     } catch(Exception e0) {
         try {
             // Load configuration from install variables (package.json) three directories above
-            def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../../package.json").text).cordova.plugins['cordova-plugin-fcm-with-dependecy-updated']
+            def PLUGIN_CONFIG = new groovy.json.JsonSlurper().parseText(file("${projectDir}/../../../package.json").text).cordova.plugins['cordova-plugin-fcm-updated-2025']
             ANDROID_FCM_VERSION = PLUGIN_CONFIG.ANDROID_FCM_VERSION
             ANDROID_FIREBASE_BOM_VERSION = PLUGIN_CONFIG.ANDROID_FIREBASE_BOM_VERSION
         } catch(Exception e1) {
@@ -105,25 +100,17 @@ dependencies {
     // Override config with project values if available
     ANDROID_FCM_VERSION = rootProject.hasProperty('ANDROID_FCM_VERSION') ? rootProject.ext.ANDROID_FCM_VERSION : ANDROID_FCM_VERSION
     ANDROID_FIREBASE_BOM_VERSION = rootProject.hasProperty('ANDROID_FIREBASE_BOM_VERSION') ? rootProject.ext.ANDROID_FIREBASE_BOM_VERSION : ANDROID_FIREBASE_BOM_VERSION
-    if (gradleNumberVersion < 3.4f) {
-        def WARNING_STYLE = "${(char)27}[33;49"+"m"
-        def DEFAULT_STYLE = "${(char)27}[39;49"+"m"
-        print(WARNING_STYLE+"FCMPlugin: Support for Gradle v3.3 or lower is deprecated. Please upgrade to a newer version."+DEFAULT_STYLE)
-        compile "com.google.firebase:firebase-messaging:${ANDROID_FCM_VERSION}"
-    } else if (gradleNumberVersion < 5.0f) {
-        def WARNING_STYLE = "${(char)27}[33;49"+"m"
-        def DEFAULT_STYLE = "${(char)27}[39;49"+"m"
-        print(WARNING_STYLE+"FCMPlugin: Support for Gradle v4 or lower is deprecated. Please upgrade to a newer version."+DEFAULT_STYLE)
-        implementation "com.google.firebase:firebase-messaging:${ANDROID_FCM_VERSION}"
-    } else {
-        implementation platform("com.google.firebase:firebase-bom:${ANDROID_FIREBASE_BOM_VERSION}")
-        implementation "com.google.firebase:firebase-messaging"
-    }
+    
+    // Use modern Firebase BOM approach for dependency management
+    implementation platform("com.google.firebase:firebase-bom:${ANDROID_FIREBASE_BOM_VERSION}")
+    implementation "com.google.firebase:firebase-messaging"
 }
 
 
 //apply plugin: 'com.google.gms.google-services'
-// class must be used instead of id(string) to be able to apply plugin from non-root gradle file
-if (!project.plugins.hasPlugin('com.google.gms.google-services')) {
-   apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
+// Apply Google Services Plugin only if not already applied
+afterEvaluate {
+    if (!project.plugins.hasPlugin('com.google.gms.google-services')) {
+        apply plugin: 'com.google.gms.google-services'
+    }
 }
